# rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml  test.http
.github/workflows/: rust.yml
fixtures/: blake3.txt  ed25519.pk  ed25519.sk  index.html  temp.b64
src/: lib.rs  main.rs  opts.rs  process.rs
src/opt/: base64.rs  csv.rs  http.rs  mod.rs  pwd.rs  text.rs
src/process/: base64.rs  csv.rs  http.rs  mod.rs  pwd.rs  text.rs
