[package]
name = "rcli"
version = "0.1.0"
authors = ["Eric <eric@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.49", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
