[package]
name = "rcli"
version = "0.1.0"
authors = ["Eric <eric@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.49", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zxcvbn = "3.1.0"
